--- a/develop/2016-12-01-irio-anomalies-in-meal-prices.html
+++ b/develop/2016-12-01-irio-anomalies-in-meal-prices.html
@@ -14790,6 +14790,331 @@ Name: 0, dtype: object</pre>
 </div>
 
 </div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Clustering-for-find-the-best-group-for-a-new-restaurant">Clustering for find the best group for a new restaurant<a class="anchor-link" href="#Clustering-for-find-the-best-group-for-a-new-restaurant">&#182;</a></h3>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[43]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">companies</span><span class="o">.</span><span class="n">shape</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[43]:</div>
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>(18013, 228)</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[45]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cnpjs</span> <span class="o">=</span> <span class="n">dataset</span><span class="o">.</span><span class="n">sort_values</span><span class="p">(</span><span class="s1">&#39;issue_date&#39;</span><span class="p">)</span> \
+    <span class="o">.</span><span class="n">loc</span><span class="p">[</span><span class="n">dataset</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">str</span><span class="o">.</span><span class="n">len</span><span class="p">()</span> <span class="o">==</span> <span class="mi">14</span><span class="p">,</span>
+         <span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">,</span> <span class="s1">&#39;supplier&#39;</span><span class="p">]]</span> \
+    <span class="o">.</span><span class="n">drop_duplicates</span><span class="p">(</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">,</span> <span class="n">keep</span><span class="o">=</span><span class="s1">&#39;last&#39;</span><span class="p">)</span>
+<span class="n">cnpjs</span><span class="o">.</span><span class="n">head</span><span class="p">()</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[45]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<div>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>cnpj_cpf</th>
+      <th>supplier</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>58153</th>
+      <td>08706969000194</td>
+      <td>BAR E RESTAURANTE PINHEIRO LTDA.</td>
+    </tr>
+    <tr>
+      <th>166843</th>
+      <td>07920525000194</td>
+      <td>CHURRASCARIA GAUCHA</td>
+    </tr>
+    <tr>
+      <th>128664</th>
+      <td>08519192000159</td>
+      <td>A. R. T. DE DIVITIIS - ME</td>
+    </tr>
+    <tr>
+      <th>128734</th>
+      <td>42591651056874</td>
+      <td>ARCOS DOURADOS COM. DE ALIMENTOS LTDA.</td>
+    </tr>
+    <tr>
+      <th>160612</th>
+      <td>00620393000136</td>
+      <td>SANTANA &amp; CUSTODIO</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[46]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">dataset</span><span class="o">.</span><span class="n">loc</span><span class="p">[</span><span class="n">dataset</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">str</span><span class="o">.</span><span class="n">len</span><span class="p">()</span> <span class="o">==</span> <span class="mi">14</span><span class="p">]</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s1">&#39;cnpj&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[46]:</div>
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>&lt;pandas.core.groupby.DataFrameGroupBy object at 0x137b980b8&gt;</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[47]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">is_cnpj</span> <span class="o">=</span> <span class="p">(</span><span class="n">dataset</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">str</span><span class="o">.</span><span class="n">len</span><span class="p">()</span> <span class="o">!=</span> <span class="mi">14</span><span class="p">)</span> <span class="o">&amp;</span> \
+    <span class="n">dataset</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">notnull</span><span class="p">()</span> <span class="o">&amp;</span> \
+    <span class="n">dataset</span><span class="p">[</span><span class="s1">&#39;document_type&#39;</span><span class="p">]</span> <span class="o">!=</span> <span class="mi">2</span>
+<span class="n">dataset</span><span class="o">.</span><span class="n">loc</span><span class="p">[</span><span class="n">is_cnpj</span><span class="p">]</span> \
+    <span class="o">.</span><span class="n">sort_values</span><span class="p">(</span><span class="s1">&#39;total_net_value&#39;</span><span class="p">,</span> <span class="n">ascending</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span><span class="o">.</span><span class="n">iloc</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[47]:</div>
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>year                                         2009
+applicant_id                                 1309
+document_id                               1689682
+reimbursement_value_total                     NaN
+total_net_value                              5852
+reimbursement_numbers                        3087
+congressperson_name               MANOEL SALVIANO
+congressperson_id                           74456
+congressperson_document                       104
+term                                         2011
+state                                          CE
+party                                         PSD
+term_id                                        54
+subquota_number                                13
+subquota_description          Congressperson meal
+subquota_group_id                               0
+subquota_group_description                    NaN
+supplier                       HOTEL NACIONAL S/A
+cnpj_cpf                           72629140000134
+document_number                            779509
+document_type                                   0
+issue_date                    2009-09-01 00:00:00
+document_value                               5852
+remark_value                                    0
+net_values                                   5852
+month                                           8
+installment                                     0
+passenger                                     NaN
+leg_of_the_trip                               NaN
+batch_number                               428099
+                                     ...         
+secondary_activity_89                         NaN
+secondary_activity_89_code                    NaN
+secondary_activity_8_code                     NaN
+secondary_activity_9                          NaN
+secondary_activity_90                         NaN
+secondary_activity_90_code                    NaN
+secondary_activity_91                         NaN
+secondary_activity_91_code                    NaN
+secondary_activity_92                         NaN
+secondary_activity_92_code                    NaN
+secondary_activity_93                         NaN
+secondary_activity_93_code                    NaN
+secondary_activity_94                         NaN
+secondary_activity_94_code                    NaN
+secondary_activity_95                         NaN
+secondary_activity_95_code                    NaN
+secondary_activity_96                         NaN
+secondary_activity_96_code                    NaN
+secondary_activity_97                         NaN
+secondary_activity_97_code                    NaN
+secondary_activity_98                         NaN
+secondary_activity_98_code                    NaN
+secondary_activity_99                         NaN
+secondary_activity_99_code                    NaN
+secondary_activity_9_code                     NaN
+latitude                                 -15.8045
+longitude                                -47.8949
+latitude.1                               -15.8045
+longitude.1                              -47.8949
+supplier_keyword                            hotel
+Name: 23296, dtype: object</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[48]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">dataset</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">dataset</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">astype</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">str</span><span class="p">)</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;nan&#39;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[49]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cnpj_cpf_list</span> <span class="o">=</span> <span class="n">dataset</span><span class="p">[[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]]</span><span class="o">.</span><span class="n">drop_duplicates</span><span class="p">()</span>
+<span class="n">cnpj_cpf_list</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">cnpj_cpf_list</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">astype</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">str</span><span class="p">)</span> \
+    <span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;nan&#39;</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[50]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">math</span> <span class="k">import</span> <span class="n">isnan</span>
+<span class="kn">from</span> <span class="nn">pycpfcnpj</span> <span class="k">import</span> <span class="n">cpfcnpj</span>
+
+<span class="k">def</span> <span class="nf">validate_cnpj_cpf</span><span class="p">(</span><span class="n">cnpj_or_cpf</span><span class="p">):</span>
+    <span class="p">(</span><span class="n">cnpj_or_cpf</span> <span class="o">==</span> <span class="kc">None</span><span class="p">)</span> <span class="o">|</span> <span class="n">cpfcnpj</span><span class="o">.</span><span class="n">validate</span><span class="p">(</span><span class="n">cnpj_or_cpf</span><span class="p">)</span>
+
+
+
+<span class="n">cnpj_cpf_list</span><span class="p">[</span><span class="s1">&#39;valid_cnpj_cpf&#39;</span><span class="p">]</span> <span class="o">=</span> \
+    <span class="n">np</span><span class="o">.</span><span class="n">vectorize</span><span class="p">(</span><span class="n">cpfcnpj</span><span class="o">.</span><span class="n">validate</span><span class="p">)(</span><span class="n">cnpj_cpf_list</span><span class="p">[</span><span class="s1">&#39;cnpj_cpf&#39;</span><span class="p">])</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[51]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cnpj_cpf_list</span><span class="p">[</span><span class="o">~</span><span class="n">cnpj_cpf_list</span><span class="p">[</span><span class="s1">&#39;valid_cnpj_cpf&#39;</span><span class="p">]]</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[51]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<div>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>cnpj_cpf</th>
+      <th>valid_cnpj_cpf</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>53466</th>
+      <td>11111111111</td>
+      <td>False</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
